# openbot-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  celery.Dockerfile  dalle.py  docker-compose-test.yaml  docker-compose.yaml  document_loader_test.py  flower.Dockerfile  pinecone_test.py  pyproject.toml
app/: .env.example  alembic.ini  app.py  celery_app.py  config.py  handlers.py  main.py  otel.py  scrapy.cfg
app/.well-known/: ai-plugin.json  openapi.json  plugins.ai-plugin.json  plugins.openapi.json
app/api/: context.py
app/api/common/: stream_response.py
app/api/dependencies/: agent_tool_loader_manager.py  auth.py  database.py  docs_security.py  file_storage.py  get_agent_provider_factory.py  get_llm_manager.py  payment.py  redis.py  repository.py  tablestore.py  tool_manager.py  vectorstore.py
app/api/dtos/: agent.py  conversation.py  datasource.py  org.py  org_member.py  subscription.py  user.py
app/api/middlewares/: __init__.py  auth.py  auth0.py  gateway.py  trace.py
app/channels/: connection.py  connection_handler.py
app/channels/api/: api_handler.py
app/channels/manager/: __init__.py  hub_manager.py
app/channels/websocket/: connection.py
app/chat/: chat_api_handler.py  handler.py
app/configs/: plans.development.json  plans.json
app/core/: errors.py  helper.py
app/core/agent/: __init__.py  agent.py  agent_builder.py  autogpt_agent.py  chat_agent.py  chat_agent_builder.py  generative_agent.py  openai_assistant_agent.py  openai_assistant_agent_builder.py  openai_tools_agent.py  openai_tools_agent_builder.py  qa_agent.py  qa_agent_builder.py  sales_agent.py  sales_agent_builder.py  tools_agent.py
app/core/agent_providers/: agent_provider.py  factory.py  openai_assistant_provider.py
app/core/agent_tool/: agent_tool_loader_manager.py  agent_tool_retriever.py  errors.py
app/core/apm/: telemetry.py
app/core/callbacks/: streaming.py
app/core/chat/: generator.py  image_transcribe_processor.py  message_routine.py  voice_transcribe_processor.py
app/core/credentials/: credentials_handler.py  credentilas_helper.py
app/core/file_storage/: file_storage.py  file_storage_manager.py  s3_storage.py
app/core/image/: __init__.py  image_cognitive_manager.py  image_cognitive_provider.py
app/db/: base_entity.py  celery_session.py  mixins.py  prisma.py  session.py
app/models/: account.py  action_connection_provider.py  agent.py  agent_datastore.py  agent_tool.py  ai_plugin.py  api.py  api_key.py  avatar.py  category.py  chat.py  connection_provider.py  conversation.py  credentials.py  custom_plan.py  datasource.py  datastore.py  document.py  image.py  integration.py  locale.py  message.py  metafield.py  org.py  org_member.py  plan.py  prompt.py  run_step.py  subscription.py  tool.py  toolkit.py  user.py  voice.py  wf_action.py  wf_app.py
app/repositories/: base.py
app/schemas/: base.py  pagination.py
app/security/: user.py
app/services/: __init__.py  account_service.py  agent_provider_listener.py  agent_service.py  agent_tool_service.py  api_key_service.py  app_service.py  avatar_service.py  connection_provider_service.py  conversation_service.py  credentials_service.py  custom_plan_service.py  datasource_service.py  datastore_service.py  document_service.py  image_service.py  integration_service.py  metafield_service.py  org_service.py  prompt_service.py  subscription_service.py  tool_service.py  toolkit_service.py  user_service.py  voice_recognize_service.py  voice_service.py
app/tasks/: celery_worker.py
app/vectorstore/: __init__.py  datastore_manager.py  models.py  pinecone.py  qdrant.py  vectorstore.py  zilliz.py
(+236 files in other folders)
